# alpine-image

./: .gitignore  Magefile.go  README.md  TODO.md  Taskfile.yml  go.mod  go.sum  pyproject.toml
alpine-image/: ansible-playbook.yml  qemu_bootcmd
alpine-image-vagrant/templates/: Vagrantfile.tpl.tmpl  build.pkr.hcl.tmpl  main.pkr.hcl.tmpl  source.pkr.hcl.tmpl
alpine-image/templates/: builder.pkr.hcl.tmpl  main.pkr.hcl.tmpl  source_hcloud.pkr.hcl.tmpl  source_qemu.pkr.hcl.tmpl
alpine-image_common/templates/: config.pkr.hcl.tmpl  variables.pkr.hcl.tmpl
ansible/: kickstart.yml
base-image/: ansible-playbook.yml  answerfile.j2  build.pkr.hcl  config.pkr.hcl  hcloud_kickstart.sh  hcloud_source.pkr.hcl  qemu_bootcmd  qemu_debian_bootcmd  qemu_source.pkr.hcl  variables.pkr.hcl
base-image_vagrant/: build.pkr.hcl  config.pkr.hcl  source.pkr.hcl  variables.pkr.hcl
common/: ansible.cfg  common.libsonnet  semver.libsonnet
common/ansible/: ansible.cfg
common/libvirt/: common-libvirt.libsonnet
common/packer/: common-libvirt.libsonnet  common.libsonnet  libvirt.libsonnet
hosts/: fedora-39.yaml  fedora-43.yaml
packer/: alpine.pkr.hcl
plugins/: ansible.yaml  hcloud.yaml  qemu.yaml  vagrant.yaml
recipes/alpine-image/: recipe.py
recipes/alpine-image-vagrant/: recipe.py
stage-base/: ansible-playbook.yml  base-common.libsonnet  common.libsonnet  main.pkr.jsonnet
stage-vagrant/: main.pkr.jsonnet
test/: packer_libvirt_test.go  qemu_kickstart_test.go
tests/: __init__.py  test_build_context.py  test_config.py  test_models.py  test_recipe.py
(+59 files in other folders)
